--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-12345eerrge
+<!DOCTYPE html>
+<html>
+<head>
+<title>Yicheng Wang</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+
+<h1>Hello!</h1>
+<p>
+    <img src="/WebDevAssignment1/img/img1.jpg" alt="water" width="500">
+</p>
+<a href="past.html" class="button button1"> Past Trips</a>
+<a href="future.html" class="button button2"> Future Plans</a>
+
+
+</body>
+</html>
