added pictures and home button

--- a/past.html
+++ b/past.html
@@ -29,11 +29,18 @@
 
 <table>
     <tr>
-        <td><img src="/WebDevAssignment1/img/img1.jpg" </td>
-        <td>2</th>
-        <td>3</th>
+        <td><img src="/WebDevAssignment1/img/past1.jpg"></td>
+        <td><img src="/WebDevAssignment1/img/past2.jpg"></th>
+        <td><img src="/WebDevAssignment1/img/past3.jpg"></th>
+    </tr>
+    <tr>
+        <td>Unversal Studio</td>
+        <td>CocoCay</td>
+        <td>Bahamas</td>
     </tr>
 </table>
+
+<button onclick="window.location.href='index.html';">Home</button>
 
 
 </body>
