past and furture pages

--- a/past.html
+++ b/past.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-<h1 style="color:blue">Yicheng Wang</h1>
+<h1 style="color:#3161a3">Yicheng Wang</h1>
 <p>This is where I haver been over the winter break</p>
 
 <table>
