--- a/future.html
+++ b/future.html
@@ -11,32 +11,28 @@
     }
 
     td, th {
-      border: 1px solid #dddddd;
+      border: 1px solid #ff9d76;
       text-align: left;
       padding: 8px;
-    }
-
-    tr:nth-child(even) {
-      background-color: #dddddd;
     }
     </style>
 
 </head>
 <body>
 
-<h1 style="color:#fb3569">Yicheng Wang</h1>
+<h1 style="color:#ff9d76">Yicheng Wang</h1>
 <p>Here are the places I want to go in the future</p>
 
 <table>
     <tr>
-        <td><img src=""></td>
-        <td><img src=""></th>
-        <td><img src=""></th>
+        <td><img src="/WebDevAssignment1/img/future1.jpg"></td>
+        <td><img src="/WebDevAssignment1/img/future2.jpg"></th>
+        <td><img src="/WebDevAssignment1/img/future3.jpg"></th>
     </tr>
     <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td style="text-align: center"> Tokyo, Japan</td>
+        <td style="text-align: center">KeyWest, Florida</td>
+        <td style="text-align: center">Shanghai, China</td>
     </tr>
 </table>
 
