--- a/past.html
+++ b/past.html
@@ -11,13 +11,9 @@
     }
 
     td, th {
-      border: 1px solid #dddddd;
+      border: 1px solid #FF837E;
       text-align: left;
-      padding: 8px;
-    }
-
-    tr:nth-child(even) {
-      background-color: #dddddd;
+      padding: 10px;
     }
     </style>
 
@@ -34,9 +30,9 @@
         <td><img src="/WebDevAssignment1/img/past3.jpg"></th>
     </tr>
     <tr>
-        <td>Unversal Studio</td>
-        <td>CocoCay</td>
-        <td>Bahamas</td>
+        <td style="text-align: center">Unversal Studio</td>
+        <td style="text-align: center">CocoCay</td>
+        <td style="text-align: center">Bahamas</td>
     </tr>
 </table>
 
