--- a/future.html
+++ b/future.html
@@ -21,13 +21,14 @@
 <body>
 
 <h1 style="color:#ff9d76">Yicheng Wang</h1>
+<h3>Hello!</h3>
 <p>Here are the places I want to go in the future</p>
 
 <table>
     <tr>
-        <td><img src="/WebDevAssignment1/img/future1.jpg"></td>
-        <td><img src="/WebDevAssignment1/img/future2.jpg"></th>
-        <td><img src="/WebDevAssignment1/img/future3.jpg"></th>
+        <td><img src="/img/future1.jpg"></td>
+        <td><img src="/img/future2.jpg"></th>
+        <td><img src="/img/future3.jpg"></th>
     </tr>
     <tr>
         <td style="text-align: center"> Tokyo, Japan</td>
