--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <h1>Hello!</h1>
 <p>
-    <img src="/WebDevAssignment1/img/img1.jpg" alt="water" width="300">
-    <img src="/WebDevAssignment1/img/img2.jpeg" alt="water" width="300">
+    <img src="/img/img1.jpg" alt="water" width="300">
+    <img src="/img/img2.jpg" alt="water" width="300">
 </p>
 <a href="past.html" class="button button1"> Past Trips</a>
 <a href="future.html" class="button button2"> Future Plans</a>
