--- a/past.html
+++ b/past.html
@@ -21,13 +21,14 @@
 <body>
 
 <h1 style="color:#3161a3">Yicheng Wang</h1>
+<h3>Hello!</h3>
 <p>This is where I haver been over the winter break</p>
 
 <table>
     <tr>
-        <td><img src="/WebDevAssignment1/img/past1.jpg"></td>
-        <td><img src="/WebDevAssignment1/img/past2.jpg"></th>
-        <td><img src="/WebDevAssignment1/img/past3.jpg"></th>
+        <td><img src="/img/past1.jpg"></td>
+        <td><img src="/img/past2.jpg"></th>
+        <td><img src="/img/past3.jpg"></th>
     </tr>
     <tr>
         <td style="text-align: center">Unversal Studio</td>
