--- a/past.html
+++ b/past.html
@@ -22,7 +22,7 @@
 
 <h1 style="color:#3161a3">Yicheng Wang</h1>
 <h3>Hello!</h3>
-<p>This is where I haver been over the winter break</p>
+<p>This is where I have been over the winter break</p>
 
 <table>
     <tr>
