--- a/past.html
+++ b/past.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-<h1 style="color:#3161a3">Yicheng Wang</h1>
+<h1 style="color:#3161a3">Past Trips</h1>
 <h3>Hello!</h3>
 <p>This is where I have been over the winter break</p>
 
