fixed img that can't load

--- a/future.html
+++ b/future.html
@@ -20,20 +20,20 @@
 </head>
 <body>
 
-<h1 style="color:#ff9d76">Yicheng Wang</h1>
+<h1 style="color:#ff9d76">My Future Trip Plans</h1>
 <h3>Hello!</h3>
 <p>Here are the places I want to go in the future</p>
 
 <table>
     <tr>
-        <td><img src="/img/future1.jpg"></td>
-        <td><img src="/img/future2.jpg"></th>
-        <td><img src="/img/future3.jpg"></th>
+        <td><img src="https://cdn.discordapp.com/attachments/1077038540359221258/1077763017623744574/future1.jpg" alt="future1"></td>
+        <td><img src="https://cdn.discordapp.com/attachments/1077038540359221258/1077763017913143336/future2.jpg" alt="future2"></th>
+        <td><img src="https://cdn.discordapp.com/attachments/1077038540359221258/1077763018273869854/future3.jpg" alt="future3"></th>
     </tr>
     <tr>
-        <td style="text-align: center"> Tokyo, Japan</td>
-        <td style="text-align: center">KeyWest, Florida</td>
-        <td style="text-align: center">Shanghai, China</td>
+        <td style="text-align: center">This is at the top of my list of places I want to visit! Tokyo, Japan</td>
+        <td style="text-align: center">This is the second most place I want to visit in the future! KeyWest, Florida</td>
+        <td style="text-align: center">This is the third place I want to visit in the future! Shanghai, China</td>
     </tr>
 </table>
 
