--- a/past.html
+++ b/past.html
@@ -26,14 +26,14 @@
 
 <table>
     <tr>
-        <td><img src="/img/past1.jpg"></td>
-        <td><img src="/img/past2.jpg"></th>
-        <td><img src="/img/past3.jpg"></th>
+        <td><img src="https://cdn.discordapp.com/attachments/1077038540359221258/1077038689730953307/IMG_4881.jpg" alt="past1"></td>
+        <td><img src="https://cdn.discordapp.com/attachments/1077038540359221258/1077038795314176030/IMG_5616.jpg" alt="past2"></th>
+        <td><img src="https://cdn.discordapp.com/attachments/1077038540359221258/1077038882245328936/IMG_5652.jpg" alt="past3"></th>
     </tr>
     <tr>
-        <td style="text-align: center">Unversal Studio</td>
-        <td style="text-align: center">CocoCay</td>
-        <td style="text-align: center">Bahamas</td>
+        <td style="text-align: center">This picture was taken by me when I was in The Wizarding World of Harry Potter at Unversal Studio</td>
+        <td style="text-align: center">This picture was taken by me when I was on the island of CocoCay</td>
+        <td style="text-align: center">This picture was taken by me when I was on the cruise ship that arrives in the Bahamas</td>
     </tr>
 </table>
 
