--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 <body>
 
 <h1>Hello!</h1>
+<h3>Lets take a look at my travel book!</h3>
 <p>
-    <img src="/img/img1.jpg" alt="water" width="300">
-    <img src="/img/img2.jpg" alt="water" width="300">
+    <img src="https://cdn.discordapp.com/attachments/1077038540359221258/1077763057205387325/img1.jpg" alt="Home page img" width="300">
+    <img src="https://cdn.discordapp.com/attachments/1077038540359221258/1077763057704517712/img2.jpg" alt="Home page img" width="300">
 </p>
 <a href="past.html" class="button button1"> Past Trips</a>
 <a href="future.html" class="button button2"> Future Plans</a>
